implemented project service and TaskService

--- a/TaskManager_Data/TaskManager_Data.csproj
+++ b/TaskManager_Data/TaskManager_Data.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManager_Models\TaskManager_Models.csproj" />
+  </ItemGroup>
+
 </Project>
