--- a/TaskManager_Models/TaskManager_Models.csproj
+++ b/TaskManager_Models/TaskManager_Models.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
     <Folder Include="Domains\" />
+    <Folder Include="Entities\Domains\Security\" />
   </ItemGroup>
 
   <ItemGroup>
