--- a/TaskManager_Services/TaskManager_Services.csproj
+++ b/TaskManager_Services/TaskManager_Services.csproj
@@ -19,8 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TaskManager_AsyncClient\TaskManager_AsyncClient.csproj" />
     <ProjectReference Include="..\TaskManager_Cache\TaskManager_Cache.csproj" />
     <ProjectReference Include="..\TaskManager_Data\TaskManager_Data.csproj" />
+    <ProjectReference Include="..\TaskManager_MessageContracts\TaskManager_MessageContracts.csproj" />
     <ProjectReference Include="..\TaskManager_Models\TaskManager_Models.csproj" />
   </ItemGroup>
 
